# legend

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: release.md
src/legend/: __init__.py  api.py  cli.py  constants.py  exceptions.py  setup.py
src/legend/core/: entities.py  models.py
src/legend/detection/: pipeline.py  spacy_detector.py  yara_detector.py
src/legend/entity_map/: base.py  memory.py
src/legend/observability/: emitter.py
src/legend/replacement/: engine.py
src/legend/replacement/generators/: base.py  faker_generators.py  format_preserving.py  iban.py
src/legend/revert/: pass_.py
src/legend/rules/: au_abn.yar  au_acn.yar  au_medicare.yar  au_tfn.yar  credit_card.yar  crypto.yar  email_address.yar  iban_code.yar  in_aadhaar.yar  in_pan.yar  ip_address.yar  medical_license.yar  phone_number.yar  uk_nhs.yar  url.yar  us_bank_number.yar  us_driver_license.yar  us_itin.yar  us_passport.yar  us_ssn.yar
tests/: conftest.py
tests/integration/: test_full_loop.py
tests/unit/: test_api.py  test_detection.py  test_entity_map.py  test_observability.py  test_replacement.py  test_revert.py
