[project]
name = "legend-pii"
dynamic = ["version"]
description = "Reversible PII pseudonymization for the full AI agentic loop."
readme = "README.md"
authors = [
    { name = "David Kirchhoff", email = "54682095+daved01@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "en-core-web-lg",
    "faker>=37.0.0",
    "pydantic>=2.13.4",
    "spacy>=3.8.0",
    "yara-python>=4.5.0",
]

[project.scripts]
legend = "legend.cli:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.hatch.version]
path = "src/legend/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "git-cliff>=2.0.0",
    "mypy>=1.15.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }